# Eventra

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  Taskfile.yml  _ev_fetch.err  _ev_unshallow2.err  audit_scorecard.json  deny.toml  docker-compose.yml  justfile  llms.txt
.cargo/: audit.toml
.github/: SECURITY.md
.github/workflows/: audit.yml  ci.yml  deny.yml  scorecard.yml  secret-scan.yml  security.yml
archive/DataKit-eventra-2026-06-20/: Cargo.toml  ORIGIN.md
deploy/k8s/: deployment.yaml
docs/: adapter-migration.md  deploy.md
docs/boundary/: Eventra.md  argis-extensions.md
docs/disposition/: p4-contracts-slice3-event-bus.md  phenotype-event-bus-runtime-boundary.md  phenotype-event-bus-runtime-compat.md
docs/intent/: Eventra.md  argis-extensions.md
docs/ops/: OUTBOX_RUNBOOK.md
docs/remediation/: OBSERVABILITY.md  OPS.md
findings/: 71-pillar-2026-06-20-Eventra.md
pheno-flags/: Cargo.toml
pheno-port-adapter/: Cargo.toml
rust/eventkit-obs/: Cargo.toml
rust/eventkit-obs/src/: correlation.rs  health.rs  http_health.rs  lib.rs  logging.rs  metrics.rs  otel.rs
rust/phenotype-error-core/: Cargo.toml
rust/phenotype-error-core/src/: lib.rs
rust/phenotype-event-bus/: Cargo.toml
rust/phenotype-event-bus/src/: lib.rs  memory.rs  outbox.rs  outbox_metrics.rs  outbox_relay.rs  outbox_sqlite.rs
rust/phenotype-event-contracts/: Cargo.toml
rust/phenotype-event-contracts/src/: bus.rs  contract.rs  envelope.rs  error.rs  event.rs  lib.rs  pubsub.rs  store.rs
rust/phenotype-event-sourcing/: Cargo.toml
rust/phenotype-event-sourcing/src/: hash.rs
scripts/: audit.sh
src/: lib.rs
src/adapters/: event_store.rs  mod.rs  persistent_event_store.rs
src/application/: command_handler.rs  event_bus.rs  mod.rs  persistent_event_bus.rs  persistent_projection.rs  projection.rs
src/domain/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs
src/infrastructure/: mod.rs
src/security/: cipher.rs  encrypted_store.rs  mod.rs  signed_bus.rs  signer.rs
