[workspace]
resolver = "2"
members = [
    ".",
    "rust/phenotype-event-contracts",
]

[package]
name = "eventkit"
version = "0.1.0"
edition = "2021"
description = "Event-driven architecture framework with CQRS and Event Sourcing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/Eventra"
documentation = "https://docs.rs/eventkit"
keywords = ["phenotype", "pheno-proc"]
categories = ["development-tools"]
authors = ["kooshapari"]
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
