[package]
name = "eventkit-obs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Observability utilities for Eventra/eventkit: structured logging, correlation IDs, metrics hooks, and health probes"
repository = "https://github.com/KooshaPari/Eventra"
rust-version = "1.75"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", optional = true }
opentelemetry-otlp = { version = "0.26", optional = true, features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.27", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json = "1"
parking_lot = "0.12"
ureq = { version = "2", default-features = false, features = ["tls"] }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"], optional = true }

[features]
default = []
http-health = ["dep:axum", "dep:tokio"]
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:tracing-opentelemetry",
]

[[bin]]
name = "eventkit-healthcheck"
path = "src/bin/healthcheck.rs"
