[package]
name = "phenotype-error-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared error types for the Phenotype ecosystem (Eventra fork of the missing upstream crate)"
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
