[package]
name = "phenotype-event-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Event and event-bus contract traits for the Phenotype ecosystem (Eventra terminal owner)"
repository = "https://github.com/KooshaPari/Eventra"
rust-version = "1.75"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
